--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 TELEGRAM_BOT_TOKEN = 0123456789:randomstring
 TELEGRAM_BOT_PASSPHRASE = randomstring
+RECAPTCHA_KEY=randomstring
+RECAPTCHA_BASE_URL=url
+TARGET_URL=url
+REFRESH_TIME=600000
