--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.1.3",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20",
@@ -32,6 +33,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
