Updated the telegram bot module.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-TELEGRAM_BOT_TOKEN = 0123456789:randomstring
-TELEGRAM_BOT_PASSPHRASE = randomstring
+TELEGRAM_BOT_TOKEN=0123456789:randomstring
+TELEGRAM_BOT_PASSPHRASE=randomstring
+TELEGRAM_BOT_SUBSCRIBE_PASSPHRASE=randomstring
 RECAPTCHA_KEY=randomstring
 RECAPTCHA_BASE_URL=url
 TARGET_URL=url
