- regactoring all code

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ TELEGRAM_BOT_PASSPHRASE=randomstring
 TELEGRAM_BOT_SUBSCRIBE_PASSPHRASE=randomstring
 RECAPTCHA_KEY=randomstring
 RECAPTCHA_BASE_URL=url
-TARGET_URL=url
+EMBASSY_URL=url
 REFRESH_TIME=600000
