--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-	"gcp-build": "nest build",
+    "gcp-build": "nest build",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=production nest start",
@@ -25,6 +25,7 @@
     "axios": "^1.1.3",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "node-schedule": "^2.1.1",
     "node-telegram-bot-api": "^0.60.0",
     "nodemon": "^2.0.20",
     "reflect-metadata": "^0.1.13",
